--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,42 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@id/navigation_main">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.nikitagorbatko.testfoods.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/navigation_main"
+        android:name="com.nikitagorbatko.feature_main.MainFragment"
+        android:label="@string/title_main"
+        tools:layout="@layout/fragment_main" >
+        <action
+            android:id="@+id/action_navigation_main_to_navigation_category"
+            app:destination="@id/navigation_category" />
+    </fragment>
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.nikitagorbatko.testfoods.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_cart"
+        android:name="com.nikitagorbatko.feature_cart.CartFragment"
+        android:label="@string/title_cart" />
+    <fragment
+        android:id="@+id/navigation_category"
+        android:name="com.nikitagorbatko.feature_category.CategoryFragment"
+        android:label="@string/title_category" >
+        <action
+            android:id="@+id/action_navigation_category_to_navigation_product"
+            app:destination="@id/navigation_product" />
+    </fragment>
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.nikitagorbatko.testfoods.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_product"
+        android:name="com.nikitagorbatko.feature_product.ProductFragment"
+        android:label="ProductFragment" />
+    <fragment
+        android:id="@+id/navigation_account"
+        android:name="com.nikitagorbatko.feature_account.AccountFragment"
+        android:label="AccountFragment" />
+    <fragment
+        android:id="@+id/navigation_search"
+        android:name="com.nikitagorbatko.feature_search.SearchFragment"
+        android:label="SearchFragment" />
+
 </navigation>
