--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_category"
+        android:id="@+id/navigation_main"
         android:icon="@drawable/ic_main"
         android:title="@string/title_main" />
 
