--- a/feature/cart/src/main/res/values/colors.xml
+++ b/feature/cart/src/main/res/values/colors.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="counter_background">#EFEEEC</color>
+    <color name="button_color">#3364E0</color>
+    <color name="white">#fff</color>
 </resources>
