--- a/feature/dishes/src/main/res/layout/item_dish.xml
+++ b/feature/dishes/src/main/res/layout/item_dish.xml
@@ -30,6 +30,7 @@
         android:id="@+id/text_dish_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:ellipsize="end"
         android:lineSpacingExtra="-2sp"
         android:lines="2"
