--- a/feature/dishes/src/main/res/values/colors.xml
+++ b/feature/dishes/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="chip_background_checked">#3364E0</color>
     <color name="white">#fff</color>
     <color name="black">#000</color>
+
+    <color name="image_background">#F8F7F5</color>
+    <color name="button_color">#3364E0</color>
 </resources>
