--- a/feature/dishes/src/main/res/layout/fragment_dishes.xml
+++ b/feature/dishes/src/main/res/layout/fragment_dishes.xml
@@ -56,9 +56,11 @@
         android:id="@+id/text_dishes_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/sf_pro_display"
         android:text="@string/no_network"
         android:textColor="#7E57C2"
-        android:textSize="18sp"
+        android:textSize="28sp"
+        android:textStyle="bold"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
