--- a/feature/account/src/main/res/layout/fragment_account.xml
+++ b/feature/account/src/main/res/layout/fragment_account.xml
@@ -9,7 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:fontFamily="@font/sf_pro_display"
+        android:text="@string/coming_soon"
         android:textSize="28sp"
-        android:textStyle="bold"
-        android:text="Coming soon" />
+        android:textStyle="bold" />
 </FrameLayout>
