--- a/feature/cart/src/main/res/layout/fragment_cart.xml
+++ b/feature/cart/src/main/res/layout/fragment_cart.xml
@@ -10,6 +10,7 @@
         android:id="@+id/recycler_cart_dishes"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +26,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:visibility="gone"
         android:backgroundTint="@color/button_color"
         android:text="Оплатить"
         android:textAllCaps="false"
@@ -50,12 +52,13 @@
         android:id="@+id/text_dishes_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/no_network"
+        android:text="@string/no_dishes"
         android:textColor="#7E57C2"
-        android:textSize="18sp"
+        android:textSize="28sp"
+        android:textStyle="bold"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />1
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
