--- a/feature/cart/src/main/res/layout/item_counter.xml
+++ b/feature/cart/src/main/res/layout/item_counter.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="32dp"
     android:elevation="0dp"
     app:cardCornerRadius="8dp">
 
@@ -17,7 +17,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
             android:layout_weight="1"
             android:background="@null"
             app:srcCompat="@drawable/ic_minus" />
@@ -32,6 +34,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="4dp"
             android:layout_weight="1"
+            android:fontFamily="@font/sf_pro_display"
             android:gravity="center"
             android:text="1"
             android:textColor="#000"
@@ -43,7 +46,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginEnd="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="6dp"
+            android:layout_marginBottom="4dp"
             android:layout_weight="1"
             android:background="@null"
             app:srcCompat="@drawable/ic_plus" />
