--- a/feature/cart/src/main/res/layout/item_product.xml
+++ b/feature/cart/src/main/res/layout/item_product.xml
@@ -3,15 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
-    android:layout_height="wrap_content">
+    android:layout_marginBottom="4dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="62dp"
         android:layout_height="62dp"
         android:layout_marginStart="16dp"
+        android:background="@color/image_background"
         android:elevation="0dp"
         app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -40,6 +41,7 @@
             android:id="@+id/text_dish_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/sf_pro_display"
             android:textColor="#000"
             android:textSize="14sp"
             tools:text="Зеленый салат" />
@@ -54,6 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:fontFamily="@font/sf_pro_display"
                 android:textColor="#000"
                 android:textSize="14sp"
                 tools:text="390₽" />
@@ -63,14 +66,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                tools:text=" · 420г"
+                android:fontFamily="@font/sf_pro_display"
                 android:textColor="#A6000000"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                tools:text=" · 420г" />
         </LinearLayout>
     </LinearLayout>
 
-    <include
-        layout="@layout/item_counter"
+    <com.nikitagorbatko.cart.CustomDishCounter
+        android:id="@+id/counter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|end"
@@ -79,6 +83,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
