--- a/feature/main/src/main/res/layout/item_category.xml
+++ b/feature/main/src/main/res/layout/item_category.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
     android:layout_marginTop="4dp"
+    android:layout_marginEnd="16dp"
     android:layout_marginBottom="4dp"
     android:elevation="0dp"
     app:cardCornerRadius="16dp">
@@ -26,23 +26,24 @@
         <TextView
             android:id="@+id/text_category"
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:fontFamily="@font/sf_pro_display"
+            android:letterSpacing="0.01"
+            android:lineSpacingExtra="1sp"
+            android:maxLines="2"
             android:textColor="#000"
             android:textSize="20sp"
-            android:maxLines="2"
             android:textStyle="bold"
-            android:lineSpacingExtra="1sp"
-            android:letterSpacing="0.01"
-            android:ellipsize="end"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
             tools:text="Пекарни и кондитерские" />
 
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
