--- a/feature/cart/src/main/res/layout/item_product.xml
+++ b/feature/cart/src/main/res/layout/item_product.xml
@@ -12,7 +12,7 @@
         android:layout_width="62dp"
         android:layout_height="62dp"
         android:layout_marginStart="16dp"
-        android:background="@color/image_background"
+        app:cardBackgroundColor="@color/image_background"
         android:elevation="0dp"
         app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
