--- a/feature/main/src/main/res/layout/item_category.xml
+++ b/feature/main/src/main/res/layout/item_category.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
     android:layout_marginTop="4dp"
+    android:minHeight="140dp"
     android:layout_marginEnd="16dp"
     android:layout_marginBottom="4dp"
     android:elevation="0dp"
